kubernetes/prometheus/overlays/okd/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app: prometheus
    app.kubernetes.io/instance: prometheus
spec:
  host: prometheus.apps.okd.<path:secret/data/homelab/domain#url>
  to:
    kind: Service
    name: prometheus-service
    weight: 100
  port:
    targetPort: 9090
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: thanos-querier
  namespace: prometheus
  labels:
    app: prometheus
    app.kubernetes.io/instance: prometheus
spec:
  host: thanos-querier.apps.okd.<path:secret/data/homelab/domain#url>
  to:
    kind: Service
    name: thanos-querier
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
