kubernetes/prometheus/overlays/okd/egress-firewall.yaml
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: prometheus
spec:
  egress:
    # Control Plane
    - type: Allow
      to:
        nodeSelector:
          matchLabels:
            node-role.kubernetes.io/control-plane: ""
    - type: Allow
      to:
        cidrSelector: 10.0.0.3/32
    - type: Allow
      to:
        cidrSelector: 10.0.0.4/32
    - type: Allow
      to:
        cidrSelector: 10.0.0.5/32
    - type: Allow
      to:
        cidrSelector: 10.0.0.107/32
    - type: Allow
      to:
        cidrSelector: 10.0.0.108/32
    - type: Allow
      to:
        cidrSelector: 10.0.0.109/32
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
